# tia-mi-manna-rent-prorater

./: app.py  estimator.py  index.html  main.py  prorated_app.py  pyproject.toml  requirements.txt  test.ipynb
0-DatalngestParsing/: 1-dataingestion.ipynb
